proc-macro-error/test-crate/tests/ui/option_expect.rs
extern crate test_crate;
use test_crate::make_fn;

make_fn!(option_expect);

fn main() {}
